Updates: Web: Fix issue with text input field being too wide Web: organize CSS file Web: when canceling in model, prevent reloading

--- a/Web/src/App.css
+++ b/Web/src/App.css
@@ -65,12 +65,32 @@ input:checked + .slider:before {
   z-index: 999;
 }
 
+.brokenImage, .image-crop svg, .editSaveCancelPanel .brokenImage {
+  width: 128px !important;
+  height: 187px !important;
+}
+
 .cancelIcon {
   padding-left: 85%;
   display: flex;
   float: right;
   margin-top: 25px;
   transform: scale(1.8) !important;
+}
+
+.card {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 40px;
+  width: 100px;
+  margin-bottom:10px;
+}
+
+.cards {
+  display: grid;
+  width: 600px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .clickable {
@@ -90,6 +110,10 @@ input:checked + .slider:before {
 
 .column {
   margin-right: 75px;
+}
+
+.container {
+  justify-content: center;
 }
 
 .customLeftMargin {
@@ -129,11 +153,14 @@ input:checked + .slider:before {
   transform: scale(1.8) !important;
 }
 
-
-.brokenImage, .image-crop svg, .editSaveCancelPanel .brokenImage {
-  width: 128px !important;
-  height: 187px !important;
+.image-crop img {
+  border-radius: 15px;
+  width: 128px;
+  height: 187px;
+  text-align: center;
+  margin-right: 10px;
 }
+
 .imdbSearch {
   display: grid;
   max-height: 25px;
@@ -150,6 +177,7 @@ input:checked + .slider:before {
   font-family: "Pt Sans", helvetica, sans-serif;
   line-height: 1.6em;
   font-size: 1em;
+  width: fit-content;
 }
 
 .item {
@@ -159,8 +187,23 @@ input:checked + .slider:before {
   vertical-align: top;
 }
 
+.item-id {
+  text-align: center;
+}
+
+.labelWidth {
+  width: fit-content;
+  position: relative;
+  top: -5px;
+  z-index: 999;
+}
+
 .leftMargin {
   margin-left: 25px;
+}
+
+.margin-bottom {
+  margin-bottom: -15px;
 }
 
 .menuBar {
@@ -181,6 +224,23 @@ input:checked + .slider:before {
 .menuBarActive {
   background-color: #f1ebe4;
   width: fit-content;
+}
+
+.menuBarActive ul {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  position: relative;
+  left: -27px;
+}
+
+.menuBarActive ul li {
+  margin-top: 20px;
+}
+
+.menuBarActive ul li span {
+  float: left;
+  width: 120px;
 }
 
 .menuBarActive .row {
@@ -229,8 +289,20 @@ input:checked + .slider:before {
   min-height: 225px;
 }
 
+.narrow {
+  height: 30px;
+}
+
 .narrowWidth {
   width: 60px;
+}
+
+.no-width {
+  width: unset;
+}
+
+.noBulletPoints {
+  list-style-type: none;
 }
 
 .poster-detail {
@@ -299,6 +371,42 @@ input:checked + .slider:before {
   margin-top: 25px;
 }
 
+.show-list {
+  background-color: #f1ebe4;
+  border-radius: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+}
+
+.show-item {
+  border-style: dashed;
+  border-radius: 15px;
+  border-width: 1px;
+  font-family: "Brush Script MT", cursive;
+  margin-bottom: 45px;
+  margin-right: 55px;
+  /*max-width: 175px;*/
+  overflow: hidden;
+  text-align: center;
+  vertical-align: top;
+  list-style: none;
+  width: 150px;
+}
+
+.show-item div {
+  margin-left: 15px;
+}
+
+.show-link {
+  text-align: center;
+}
+
+.show-title {
+  display: inline-flex;
+  word-wrap: break-word;
+}
+
 .slider {
   position: absolute;
   cursor: pointer;
@@ -333,6 +441,15 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.smallInputField {
+  max-width: 150px;
+}
+
+.small-text {
+  font-size: small;
+  margin-top: 15%;
+}
+
 .sortBy {
   margin-right: 15px;
 }
@@ -351,6 +468,10 @@ input:checked + .slider:before {
   height: 0;
 }
 
+.text-label {
+  font-family: "Brush Script MT", cursive;
+}
+
 .textLabel {
   font-weight: bold;
   word-wrap: break-word;
@@ -365,6 +486,13 @@ input:checked + .slider:before {
   display: inline-flex;
   max-width: 95px;
 }
+
+
+
+
+
+
+
 
 .fade-in {
   animation: fadeInAnimation 0.5s linear;
@@ -390,133 +518,4 @@ input:checked + .slider:before {
   0% {
     opacity: 0;
   }
-}
-
-/* Switch css end */
-
-.show-list {
-  background-color: #f1ebe4;
-  border-radius: 15px;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: left;
-}
-
-.show-item {
-  border-style: dashed;
-  border-radius: 15px;
-  border-width: 1px;
-  font-family: "Brush Script MT", cursive;
-  margin-bottom: 45px;
-  margin-right: 55px;
-  /*max-width: 175px;*/
-  overflow: hidden;
-  text-align: center;
-  vertical-align: top;
-  list-style: none;
-  width: 150px;
-}
-
-.show-item div {
-  margin-left: 15px;
-}
-
-.show-title {
-  display: inline-flex;
-  word-wrap: break-word;
-}
-
-.image-crop img {
-  border-radius: 15px;
-  width: 128px;
-  height: 187px;
-  text-align: center;
-  margin-right: 10px;
-  /*padding-right: 15px;*/
-}
-
-.show-link {
-  text-align: center;
-}
-
-.item-id {
-  text-align: center;
-}
-
-.menuBarActive ul {
-  display: flex;
-  flex-direction: column;
-  list-style-type: none;
-  position: relative;
-  left: -27px;
-}
-
-.menuBarActive ul li {
-  margin-top: 20px;
-}
-
-.menuBarActive ul li span {
-  float: left;
-  width: 120px;
-}
-
-.noBulletPoints {
-  list-style-type: none;
-}
-
-.smallInputField {
-  max-width: 150px;
-}
-
-
-
-
-
-.container {
-  /*display: flex;*/
-  justify-content: center;
-}
-
-.cards {
-  display: grid;
-  width: 600px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-}
-
-/* Style the cards */
-.card {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  height: 40px;
-  width: 100px;
-  margin-bottom:10px;
-}
-
-.narrow {
-     height: 30px;
-}
-
-.text-label {
-  font-family: "Brush Script MT", cursive;
-}
-
-.labelWidth {
-  width: fit-content;
-  position: relative;
-  top: -5px;
-  z-index: 999;
-}
-
-.margin-bottom {
-  margin-bottom: -15px;
-}
-
-.small-text {
-  font-size: small;
-  margin-top: 15%;
-}
-
-.no-width {
-  width: unset;
 }
